- [Feature] Convert uploads to Google Docs format (Google Docs)
- [Feature] Optical Character Recognition (OCR) for image uploads (Google Docs)
- [Feature] Support for Asia Pacific (Singapore) location (S3)
- [Feature] HTTP plain text connection support to connect to third party S3 servers (#4181) (S3)
- [Feature] Custom metadata attributes (#4063) (S3, Rackspace Cloud Files)
- [Bugfix] Overwrite files causes append (S3) (#4419)
- [Bugfix] Help menu items disabled (#4406)

3.4.2 (Apr-10-2010) [http://trac.cyberduck.ch/milestone/3.4.2]
- [Localize] Georgian Localization
- [Feature] Choose localization in preferences
- [Feature] Option to disable use of system proxy settings in preferences
- [Feature] Allow arbitrary input for bandwidth throttle (#1746)
- [Feature] Read hostname alias from ~/.ssh/config (SFTP) (#3819)
- [Feature] Allow page setup configuration for browser view print (#4139)
- [Bugfix] Connections fail with at sign in username (WebDAV) (#4097)
- [Bugfix] SOCKS proxy support broken [#3803]

3.4.1 (Jan-17-2010) [http://trac.cyberduck.ch/milestone/3.4.1]
- [Feature] Display checksum of files in Info panel (S3, Rackspace Cloud Files) (#4043)
- [Bugfix] Incompatibilities when running on OS X 10.5 [#4102]

3.4 (Jan-16-2010) [http://trac.cyberduck.ch/milestone/3.4]
- [Localize] Serbian Localization
- [Feature] Support external editors with no ODB support for different file types (#3834)
- [Feature] Allow user to define applications to use for editing (#3112)
- [Feature] Configure Amazon CloudFront Streaming Distributions (S3) (#4069)

3.3.1 (Jan-05-2010) [http://trac.cyberduck.ch/milestone/3.3.1]
- [Feature] Support for new US West Location (S3)
- [Bugfix] Bookmark menu [#3924]
- [Bugfix] SOCKS proxy support broken [#3803]
- [Bugfix] Container listing limited to 10000 files (Rackspace Cloud Files) [#3950]
- [Bugfix] Synchronisation does not transfer files with equal size (#3100)
- [Bugfix] Selection in synchronize prompt (#3901)