@@ -39,6 +39,7 @@
         <li>[Feature] Custom metadata attributes (<a href="http://trac.cyberduck.ch/ticket/4063">#4063</a>) (S3,
             Rackspace Cloud Files)
         </li>
+        <li>[Feature] Configure Access Logs for CloudFront streaming distributions (S3)</li>
         <li>[Bugfix] Overwrite files causes append (S3) (<a href="http://trac.cyberduck.ch/ticket/4419">#4419</a>)</li>
         <li>[Bugfix] Help menu items disabled (<a href="http://trac.cyberduck.ch/ticket/4406">#4406</a>)</li>
     </ul>
